--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,7 @@
 }
 
 header {
-  height: 32vh;
+  height: 35vh;
   background-image: url('./assets/images/pattern-bg.png');
   background-repeat: no-repeat;
   background-position: center;
@@ -21,6 +21,10 @@ header h1 {
   font-size: 2rem;
   font-weight: 700;
   color: white;
+}
+
+label {
+  display: inline-flex;
 }
 
 #ip-address-input {
@@ -49,5 +53,85 @@ header h1 {
 .map-section {
   width: 100%;
   overflow: hidden;
-  height: 67vh;
+  height: 65vh;
+}
+
+.data-card {
+  border-radius: 10px;
+  padding: 12px 20px;
+  background-color: hsl(0, 0%, 100%);
+  box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+  display: flex;
+  justify-content: space-around;
+  width: 80%;
+  position: relative;
+  top: 22%;
+}
+
+.data p:nth-child(1) {
+  color: hsl(0, 0%, 59%);
+  font-weight: 700;
+}
+
+.data p:nth-child(2) {
+  font-size: 1.5rem;
+  font-weight: 700;
+}
+
+.data {
+  padding: 16px 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  width: 100%;
+}
+
+.border {
+  width: 1px;
+  height: 50px;
+  margin: auto;
+  border-right: 2px solid hsl(0, 0%, 59%);
+}
+
+@media screen and (max-width: 871px) {
+  .data-card {
+    width: 80%;
+  }
+}
+
+@media screen and (max-width: 635px) {
+  .data-card {
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .data {
+    align-items: center;
+    justify-content: center;
+    padding: 8px 10px;
+  }
+
+  .border {
+    display: none;
+  }
+
+  .data p:nth-child(1) {
+    color: hsl(0, 0%, 59%);
+    font-weight: 700;
+    font-size: 12px;
+  }
+
+  .data p:nth-child(2) {
+    font-size: 1.5rem;
+    font-weight: 700;
+    font-size: 18px;
+  }
+}
+
+@media screen and (max-width: 555px) {
+  label {
+    width: 80%;
+    font-size: 6px;
+  }
 }
